--- a/who-is-on.service
+++ b/who-is-on.service
@@ -3,7 +3,7 @@ Description = who-is-on server
 
 [Service]
 WorkingDirectory = /srv/who-is-on
-ExecStart = /usr/bin/racket who-is-on-app.rb
+ExecStart = /usr/bin/racket who-is-on-app.rkt
 Restart = always
 TimeoutSec = 300
 Type = simple
