--- a/who-is-on.service
+++ b/who-is-on.service
@@ -8,7 +8,7 @@ Restart = always
 TimeoutSec = 300
 Type = simple
 User = ubuntu
-EnvironmentFile=/srv/who-is-on/env/production
+EnvironmentFile=/srv/who-is-on/.env
 
 [Install]
 WantedBy = multi-user.target
